<resources>
    <string name="app_name">Attendroid</string>
    <string name="show_schedule">Show Schedule</string>
    <string name="show_leader_board">Show Leader Board</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="welcome_message">Welcome to Attendroid!</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_id">Student ID</string>
    <string name="faculty">Faculty</string>
    <string name="department">Department</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="reg_failed">Couldn\'t register this account</string>
    <string name="auth_failed">Couldn\'t sign in</string>
    <string name="invalid_fields">Some fields are invalid</string>
    <string name="points_format">%1$d pts</string>
    <string name="welcome_format">Welcome, Dr. %1$s!</string>
    <string name="schedule">Schedule</string>
    <string name="total_hours">Total Number of Hours</string>
    <string name="professor_name">Teaching Professor\'s Name</string>
    <string name="course_prompt">Choose a course</string>
    <string name="action_settings">Settings</string>
    <string name="choose_course">Please choose a course</string>
    <string name="latitude_format">Lat: %1$.2f</string>
    <string name="longitude_format">Long: %1$.2f</string>
</resources>
